fixing overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  html {
+    @apply overflow-hidden;
+  }
+  body {
+    @apply grid h-screen place-content-center place-items-center overflow-hidden;
+  }
+}
